fixed layout issues and naming conventions errors

--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -20,6 +20,8 @@ body {
   .main-header--content {
     width: 90%;
     margin: 0 auto; }
+    .main-header--content a {
+      text-decoration: none; }
     .main-header--content h1 {
       font-size: 2em;
       display: inline-block;
@@ -63,19 +65,6 @@ body {
       font-size: 80%;
       color: gray; }
 
-/*# sourceMappingURL=style.css.map */
-
-.container {
-	width: 100%;
-	margin-left: 40%;
-	
-}
-.squareButton {
-	margin-top: 20%;
-	margin-bottom: 20%;
-	width: 200px;
-}
-
 .mainLayout {
   width: 100%;
   height: 100%;
@@ -93,5 +82,14 @@ body {
 
 .mainLayout input {
   height: 25px; }
+
+.container {
+  width: 100%;
+  margin-left: 40%; }
+
+.squareButton {
+  margin-top: 20%;
+  margin-bottom: 20%;
+  width: 200px; }
 
 /*# sourceMappingURL=style.css.map */
